--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bitsharesjs",
+    "name": "vinchainjs",
     "version": "1.5.8",
     "description": "Pure JavaScript Bitshares library for node.js and browsers.",
     "browser": {
@@ -19,8 +19,8 @@
         "postbuild": "npm run browserify && npm run build-es",
         "build:watch": "babel lib -d dist --watch",
         "prebrowserify": "mkdirp build",
-        "browserify": "cross-env NODE_ENV=production browserify --full-paths dist/browser.js --standalone bitshares_js -o build/bitsharesjs.js -d",
-        "postbrowserify": "cross-env NODE_ENV=production uglifyjs --compress --mangle --sequences --drop_console --output build/bitsharesjs.min.js -- build/bitsharesjs.js",
+        "browserify": "cross-env NODE_ENV=production browserify --full-paths dist/browser.js --standalone vinchain_js -o build/vinchainjs.js -d",
+        "postbrowserify": "cross-env NODE_ENV=production uglifyjs --compress --mangle --sequences --drop_console --output build/vinchainjs.min.js -- build/vinchainjs.js",
         "precommit": "pretty-quick --staged",
         "prepublish": "npm run build",
         "doc": "esdoc -c esdoc.json",
@@ -30,7 +30,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/VinChain/bitsharesjs.git"
+        "url": "git+https://github.com/blckchnd/vinchainjs.git"
     },
     "author": "Sigve Kvalsvik <bitsharesblocks@gmail.com> (https://github.com/svk31)",
     "contributors": [
@@ -52,7 +52,7 @@
         "babel-preset-es2015": "^6.18.0",
         "babel-preset-stage-1": "^6.16.0",
         "bigi": "^1.4.2",
-        "bitsharesjs-ws": "git+ssh://git@github.com:VinChain/bitsharesjs-ws.git",
+        "vinchainjs-ws": "git+ssh://git@github.com:blckchnd/vinchainjs-ws.git",
         "bs58": "^4.0.1",
         "bytebuffer": "^5.0.1",
         "create-hash": "^1.1.3",
